Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,9 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': [1, 2.0, 3, (4+6j)],\n",
+       " 'b': ('character string', b'byte string'),\n",
+       " 'c': {False, None, True}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open('data.pickle', 'rb') as f:\n",
     "    # The protocol version used is detected automatically, so we do not\n",
